# thay_discord_bot

./: Cargo.toml  Dockerfile  compose.yaml  compose.yml  flake.nix
.github/workflows/: publish.yml
migrations/: V1__initial.sql
scripts/: add_emojis.py  flake.nix
src/: main.rs
src/commands/: bind.rs  bravery.rs  mod.rs  recent.rs
src/utils/: http.rs  macros.rs  mod.rs  regions.rs  replies.rs
