[package]
name = "thay"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
deadpool-postgres = "0.14.1"
poise = "0.6.1"
postgres-types = { version = "0.2.9", features = ["derive"] }
refinery = { version = "0.8.16", features = ["tokio-postgres"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
serde = "1.0.219"
serde_json = "1.0.143"
serenity = "0.12.4"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tokio-postgres = "0.7.13"
